syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.billing";
option java_outer_classname = "BillingProto";

service OrderService {
  rpc ProcessOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
    string orderNumber = 1;
}

message OrderResponse {
  string status = 1;
}

service BillingService {
  rpc ProcessBilling (BillingRequest) returns (BillingResponse);
}

message BillingRequest {
  string order_id = 1;
  string user_id = 2;
  string product = 3;
  double amount = 4;
}

message BillingResponse {
  string status = 1;
  string message = 2;
}